data/derived/comb/progs/unify/prog7661.ml.out
Characters 73-74:
  List.fold_left f base fs;;
                 ^
Error: This expression has type (int -> 'a) -> int -> 'a
       but an expression was expected of type (int -> 'a) -> int -> int -> 'a
       The type variable 'a occurs inside int -> 'a
